# game-of-life-llms

./: pyproject.toml  simple_life.py
